[tool.poetry]
name = "pong-game"
version = "0.1.0"
description = "Pong game in Python Pygame"
authors = ["Juan I. Carlis <juancarlis93@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"
pep8 = "^1.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
